Added token auth and middleware
